Fixed contact icon issue with bg color not showing up. Adjusted resume so that if size changes the format changes. Made resume fade in.

--- a/src/components/MobileResume.css
+++ b/src/components/MobileResume.css
@@ -1,5 +1,19 @@
 .MobileResume-cont {
   color: #f0e3e9;
+  opacity: 0;
+  animation-name: fadeIn;
+  animation-duration: 1s;
+  animation-delay: 0;
+  animation-fill-mode: forwards;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 .MobileResume-cont * h4 {
