--- a/src/pages/resume.css
+++ b/src/pages/resume.css
@@ -2,7 +2,20 @@
   display: none;
 }
 
-@media only screen and (max-width: 415px) {
+@media only screen and (max-width: 900px) {
+  .Resume-desktop {
+    display: none;
+  }
+
+  .Resume-mobile {
+    height: calc(100vh - 45px);
+    display: block;
+    overflow: auto;
+    padding: 10px;
+  }
+}
+
+/* @media only screen and (max-width: 415px) {
   .Resume-desktop {
     display: none;
   }
@@ -12,4 +25,4 @@
     display: block;
     overflow: auto;
   }
-}
+} */
